web_dynamic/static/styles/6-filters.css
.container .filters {
    position: relative;
    background: white;
    height: 70px;
    width: 100%;
    border: 1px solid #DDDDDD;
    border-radius: 4px;
}
button {
    position: absolute;
    font-size: 18px;
    background: #FF5A5F;
    color: #FFFFFF;
    height: 48px;
    width: 20%;
    border-style: none;
    border-radius: 4px;
    top: 15%;
    right: 30px;
}
button:hover {
    opacity: 0.9;
}
.filters div {
    display: inline-grid;
}
.filters h2 {
    margin-left: 15%;
    margin-top: 0;
    margin-bottom: 0;
    font-weight: 600;
}
.filters h3 {
    margin-left: 15%;
    margin-bottom: 0;
    font-weight: 600;
}
.filters h4 {
    margin-left: 15%;
    margin-top: 0;
    font-weight: 400;
    font-size: 14px;
}
.locations {
    height: 100%;
    width: 25%;
    border-right: 1px solid #DDDDDD;
}
.amenities {
    height: 100%;
    width: 25%;
    text-overflow: ellipsis;
    
}

.popover {
    visibility: hidden;
    width: 100%;
    border: 1px solid #DDDDDD;
    border-radius: 4px;
    background: #FAFAFA;
    padding-bottom: 15px;
    height: 300px;
    overflow-y: scroll;
    scrollbar-width: none;
    max-height: 300px;
}

.popover::-webkit-scrollbar{
    width: 0px;
}

.amenities .popover {
    padding: 10px 0;
    margin-left: -5px;
    margin-top: 0%;
}

.amenities .popover ul{
    margin: 0px;
}

.locations .popover {
    margin-top: 0%;
}
.popover ul {
    list-style-type: none;
    padding-bottom: 10px;
    padding-left: 10px;
}
.popover ul li{
    padding: 4px;
    padding-left: 10px;
}

.popover ul h2{
    margin-top: 1.5%;
    margin-bottom: 5%;
    margin-left: 0px;
}

.amenities:hover .popover,
.locations:hover .popover {
    visibility: visible;
}

